# calculix-adapter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CalculiX.h  CalculiX_precice.h  MAINTAINING.md  Makefile  Makefile_i8_PaStiX  README.md  calcrhofa1.f  ccx_2.10.c  ccx_2.12.c  ccx_2.13.c  ccx_2.15.c  ccx_2.16.c  ccx_2.17.c  ccx_2.19.c  ccx_2.20.c  ccx_2.21.c  dyna_precice.c  getelementgausspointcoords.f  getflux.f  getgausspointscoords.f  getkdeltatemp.f  getstrain.f  linstatic_precice.c  multiscale_routines.f  nonlingeo_precice.c  pastix_pre_build.sh
.github/workflows/: check-format.yml  ubuntu_build.yml
adapter/: 2D3DCoupling.cpp  2D3DCoupling.h  2D3DCoupling.hpp  CCXHelpers.c  CCXHelpers.h  ConfigReader.cpp  ConfigReader.h  ConfigReader.hpp  OutputBuffer.cpp  OutputBuffer.h  OutputBuffer.hpp  PreciceInterface.c  PreciceInterface.h  nonlingeo_precice.c  nonlingeo_precice.h
examples/ccx-nasmat/: precice-config.xml
examples/ccx-nasmat/ccx/: clean.sh  config.yml  one_element.inp  run.sh
examples/ccx-nasmat/nasmat/: clean.sh  micro-manager-config.json  ruc_nasmat.py  run_micro_manager.py  run_micromanager_nasmat.sh
packaging/: README.md  changelog.Debian  make_deb.sh  manpage.md
packaging/calculix-precice2_2.17-1_amd64/DEBIAN/: control
packaging/calculix-precice2_2.17-1_amd64/usr/share/doc/calculix-precice2/: copyright
packaging/calculix-precice2_2.19-1_amd64/DEBIAN/: control
packaging/calculix-precice2_2.20.0-1_amd64/DEBIAN/: control
packaging/calculix-precice2_pkg/DEBIAN/: control
packaging/calculix-precice3_2.20.1-1_amd64/DEBIAN/: control
packaging/calculix-precice3_2.20.1-2_amd64/DEBIAN/: control
packaging/calculix-precice_2.17-1_amd64/DEBIAN/: control
patch/Spooles/: Make.inc.in
testcase/: all.frd  config.yml  flap.fbb  flap.fbd  flap.inp
tools/: format-code.sh
tools/frdConverter/: README.md  frdToVTKConverter.cs
